--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,31 @@
   text-align: center;
 }
 
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 0 2rem 2rem;
+  ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    li {
+      list-style: none;
+      margin: 0 1rem;
+    }
+  }
+}
+
+.active-effect {
+  cursor: pointer;
+  &:hover {
+    text-decoration: underline;
+    color: blue;
+  }
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
