--- a/src/styles/GroupsSection.css
+++ b/src/styles/GroupsSection.css
@@ -137,7 +137,7 @@
 }
 
 .entities-container h4 {
-  margin-top: 0;
+  margin-top: 1rem;
   margin-bottom: 1rem;
   color: #4a5568;
   font-size: 1.1rem;
